# hw

./: .gitignore  README.md
QTfrontend/: hwconsts.h  team.cpp  weapons.h
hedgewars/: uAIAmmoTests.pas  uCommandHandlers.pas  uConsts.pas  uFloat.pas  uGears.pas  uGearsHandlersMess.pas  uGearsHandlersRope.pas  uGearsHedgehog.pas  uGearsList.pas  uGearsRender.pas  uGearsUtils.pas  uSound.pas  uStore.pas  uTeams.pas  uTypes.pas  (+2 more)
share/hedgewars/Data/Maps/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_Doomwars/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_Druk/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_Europa/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_Falklands/: CMakeLists.txt  map.cfg
share/hedgewars/Data/Maps/Custom_Karibik/: CMakeLists.txt  map.cfg
share/hedgewars/Data/Maps/Custom_Megatrichter/: CMakeLists.txt  map.cfg
share/hedgewars/Data/Maps/Custom_Mosambik/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_RopesVerschnitt/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_Senegal/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_Tetris/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_Trichter3/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_Trichter3OP/: CMakeLists.txt
share/hedgewars/Data/Maps/Custom_Wahl2020/: CMakeLists.txt  map.cfg
share/hedgewars/Data/Maps/Custom_WeltFlaggen/: CMakeLists.txt
share/hedgewars/Data/Maps/Icecold/: CMakeLists.txt
share/hedgewars/Data/Maps/Pyramidshoppa/: CMakeLists.txt
share/hedgewars/Data/Themes/: CMakeLists.txt
share/hedgewars/Data/Themes/CastleUK/: CMakeLists.txt
(+57 files in other folders)
